@@ -1,3 +1,7 @@
+2005-06-22  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/mblur.c: switch to a more compact dialog layout.
+
 2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/common/mblur.c: add option of blurring inward
